Update the suggested protocol patch
Refert to adversary of 1/3 of total hashing power

--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -29,3 +29,12 @@
 	publisher = {Springer},
     year = {2015}
 }
+
+@misc{selfish_mining,
+    title={Majority is not Enough: Bitcoin Mining is Vulnerable},
+    author={Ittay Eyal and Emin Gun Sirer},
+    year={2013},
+    eprint={1311.0243},
+    archivePrefix={arXiv},
+    primaryClass={cs.CR}
+}
