--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -205,7 +205,8 @@ It remains to compute the security parameter $m$ that guarantee that all the abo
 
 In the first set of rounds, for the first $k_1$ blocks in $\alpha_A$, we only need 1 block included in $\alpha_B$ for the part of the proof described in Equation \ref{eq_round_set_1}. In the second set of rounds we need $2^{-\mu_B}\kappa$ blocks for the part of the proof described in Equation \ref{eq_round_set_2}, just as it directly results from the Common Prefix property. In order to make $m$ independent of any specific level it suffices to consider the upper bound of $\kappa$ blocks for this set of rounds. In the last set of rounds we need at least $\kappa$ adversarially generated blocks in $\alpha_A^{k_3}$ so that Lemma 1 is applicable. Since we assume honest majority, obliging to at least $\kappa$ blocks for this set of rounds suffices to guarantee for Equation \ref{eq_round_set_3}.
 
-So, we finally conclude to the following upper bound for the value of security parameter:
+So, we finally conclude to the following upper bound for the value of the
+ security parameter:
 \begin{equation}
 m = 2\kappa + 1 
 \end{equation}
@@ -259,13 +260,18 @@ Needs to be proven. It is not obvious that the attacker will succeed in high pro
 
 \subsection{Protocol Update}
 
-In order to eliminate the Chainsewing Attack we propose an update to the NIPoPoWs protocol under velvet fork. The core problem is that in her suffix proof the adversary is able to claim not only blocks of the fork chain,  which are in majority adversarially generated due to the Common Prefix property, but also an arbitrarily long part of the chain adopted by an honest player. Since blocks containing false interlink pointers are accepted as valid, the verifier cannot distinguish blocks that actually belong in a chain from blocks that only seem to belong in the same chain because they are pointed to via a false interlink pointer. 
+In order to eliminate the Chainsewing Attack we propose an update to the NIPoPoWs protocol under velvet fork. The core problem is that in her suffix proof the adversary is able to claim not only blocks of the fork chain,  which are in majority adversarially generated due to the Common Prefix property, but also an arbitrarily long part of the chain adopted by an honest player. Since blocks containing false interlink pointers are accepted as valid, the verifier cannot distinguish blocks that actually belong in a chain from blocks that only seem to belong in the same chain because they are pointed to via a false interlink pointer. \\
+
+%% first reference to 1/3 adversary
+These facts make it possible to provide a secure solution for the velvet fork conditions only under the assumption of adversary of $1/3$ of the total hashing power.\\
 
 The vulnerability that makes this attack possible is the acceptance of blocks containing false interlink pointers. Since we operate under a velvet fork we cannot eliminate such blocks, but we need, however, to restrict the adversary from being able to claim portion of another chain as part of her own fork chain. 
-The key observation on the Chainsewing Attack is that the adversary needs at least two adversarially generated blocks, one in the fork (block $a$) and one in the honest player's chain (block $a'$), which are connected in a superblock path formed by interlink pointers. This path may contain both honest or adversarial blocks. 
-In case it contains only adversarial blocks, the attack cannot harm security since we assume an attacker of less than $50\%$ hashing power.
+The key observation on the Chainsewing Attack is that the adversary needs at least one adversarially generated block in an honest player's chain (block $a'$), in order to create a path of superpointers connecting blocks of two, or more, diverse chains. The final proof chain will make use of this crossing point and may contain both honest or adversarial blocks. 
+%% intuitive reference to 1/3 adversary
+In case the proof contains only adversarial blocks, the attack cannot harm security for an adversary of less than $1/3$ hashing power. This fact will be clear in the security proof section. In short, it is true that an adversary of $1/3$ of the total hashing power can competitive in the longest valid chain as of chain quality. This means that such an adversary could manage to maintain $50\%$ of the total blocks included in the longest valid chain by following the Selfish Mining strategy\cite{selfish_mining}. An attacker of more than $1/3$ hashing power would dominate as of total hashing power expressed in mined blocks in the chain, while the inverse would be true for an attacker of less hashing power than this threshold.
 So in order to be successful, the attacker needs to ``sew`` honestly generated blocks. Thus there will be at least one honest block in the superblock path connecting blocks $a$ and $a'$, which points to an adversarial block containing false interlink or, by induction, pointing to a block containing false interlink.
-The idea is to ban all blocks generated by honest players from participating in this superblock path. In this way the adversary could not misuse hashing power of the honest players and the sewed blocks could only be adversarially generated, thus the attack would never succeed. 
+
+The idea is to ban all blocks generated by honest players from participating in this superblock path. In this way the adversary could not misuse hashing power of the honest players and the sewed blocks could only be adversarially generated, thus the attack would never succeed for an adversary of less than $1/3$ of the total hashing power. 
 We describe a protocol patch that operates as follows. The NIPoPoW protocol under velvet fork works as usual but each miner constructs a block's interlink excluding the blocks with false interlink (except the pointers of level 0). In this way, blocks containing false interlink pointers are integrated in the chain but are not taken into consideration when updating the interlink structure for the next block to be mined. No honest block could now point to an adversarial superblock that may act as the passing point to the fork chain in an adversarial suffix proof. 
 After this protocol update the adversary is only able to inject adversarially generated blocks from the chain adopted by an honest party to her own fork. This is illustrated in Figure \ref{fig:injection}.
 Since an updated honest miner will not include interlink pointers to adversarially generated blocks with incorrect interlinks, these adversarially generated blocks cannot participate in an honestly generated suffix proof, while they may participate in an adversarially suffix proof for the adversary's fork chain. Consequently, as far as the hashing power included in a suffix proof is concerned, these blocks can be conceived as belonging in the adversary's fork chain. 
@@ -277,7 +283,8 @@ Figure \ref{fig:injection} illustrates the above concluding Remarks, while sugge
 	\begin{center}
 		\includegraphics[scale=0.6]{figures/injection.png}
 	\end{center}
-	\caption{\textit{Adversarially generated blocks sewed from an honest player's chain into the adversary's suffix proof. The chain at the bottom represents the adversarial fork chain, $C_A$, while the above one is the chain of an honest player, $C_B$ . Blocks generated by the adversary are coloured black. Dashed arrows represent interlink pointers. Wavy lines imply one or more blocks. \textbf{I:} The real picture of the chains. \textbf{II:} Equivalent picture considering the hashing power included in the corresponding suffix proof of each chain.}}
+	\caption{\textit{Adversarially generated blocks sewed from an honest player's chain into the adversary's suffix proof.v$C_A$ is the adversarial fork chain and $C_B$ is the chain of an honest player. Blocks generated by the adversary are colored black. Dashed arrows represent interlink pointers. Wavy lines imply one or more blocks. \textbf{I:} The real picture
+	 of the chains. \textbf{II:} Equivalent picture considering the hashing power included in the corresponding suffix proof of each chain.}}
 	\label{fig:injection}
 \end{figure}
 
@@ -301,9 +308,9 @@ The above are illustrated, among other, in Parts I, II of Figure \ref{fig:proof_
 \end{figure}
 We will now show three successive claims under velvet fork conditions: First, $\alpha_A \downarrow \uparrow^{\mu_A}$ and $\alpha'_B \downarrow$ are mostly disjoint. Second, $a_A$ contains mostly adversarially generated blocks. And third, the adversary is able to produce this $a_A$ with negligible probability. Note that the notation $\alpha_A \downarrow \uparrow^{\mu_A}$ denotes the blocks of $\alpha_A$ which belong in the 0-level chain $C_A$, thus are not sewed in the adversary's proof by $C_B$.\\
 Let $\alpha_A = k_1 + k_2 + k_3$ and let $k_1, k_2, k_3$ be as defined in the following Claims.\\
-Let round $r_1$ be the round when block $b$ is generated and round $r_2$ when block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$ is generated.
-\textbf{Claim 1:} $\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow$ are mostly disjoint. Following the proof of Theorem 2 we conclude that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_{1} = 2^{\mu'_B - \mu_A}$. In order to see this under the velvet fork conditions consider the following two claims. First let block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$. This means that $b_2$ is the LCA block considering the adversary's proof and honest player's 0-level chain excluding any adversarially generated block included in $\alpha_A$ after the 0-level fork point .
-\textit{\underline{Claim 1a}:} If no adversarially generated block of chain $C_B$ with incorrect interlink is included in $\alpha_A$ until block $b_2$ then the claim's proof is the same to that of Theorem 2, thus we have $k_1 \leq 2^{\mu'_B - \mu_A}$.
+Let round $r_1$ be the round when block $b$ is generated and round $r_2$ when block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$ is generated.\\
+\textbf{Claim 1:} $\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow$ are mostly disjoint. Following the proof of Theorem 2 we conclude that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_{1} = 2^{\mu'_B - \mu_A}$. In order to see this under the velvet fork conditions consider the following two claims. First let block $b_2 = LCA(\alpha_A \downarrow \uparrow^{\mu_A}, \alpha'_B\downarrow)$. This means that $b_2$ is the LCA block considering the adversary's proof and honest player's 0-level chain excluding any adversarially generated block included in $\alpha_A$ after the 0-level fork point.\\
+\textit{\underline{Claim 1a}:} If no adversarially generated block of chain $C_B$ with incorrect interlink is included in $\alpha_A$ until block $b_2$ then the claim's proof is the same to that of Theorem 2, thus we have $k_1 \leq 2^{\mu'_B - \mu_A}$.\\
 \textit{\underline{Claim 1b}:}  If a block $b' = \{b' \in C_B\{b:b_2\} \cap \textit{ } b' \textit{ contains incorrect interlink} \}$ is included in $\alpha_A$ then we have that $\vert \alpha_A\downarrow\uparrow^{\mu_A}[1:] \cap \alpha'_B\downarrow[1:] \vert \leq k_1 = k_{1a} + k_{1b}$, where $ k_{1a} = 2^{\mu'_B - \mu_A}$. 
 	
 Note that after block $b'$ no more honestly generated blocks of the common subchain $C_B\{b':b_2\}$ are included in $\alpha_A$ because of Remark 2. Blocks in $\alpha_A\{b':b_2\}$ are all adversarially generated of $C_B$. Thus from that point on it is equivalent considering two disjoint chains, one with honestly and another with adversarially generated blocks, competing each other. Let these adversarially generated blocks count to $k_{1b}$,  where $k_{1b} \leq C_B\{b':b_2\}\uparrow^{\mu_A}$.\\ \textit{(In the end, consider the rounds when these blocks were generated and apply Lemma 1 to get a desirable inequality)}\\
