Refinements in discussion for <(n/2) adversary solution impossibility

--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -1,7 +1,7 @@
 In order to eliminate the Chainsewing Attack we propose an update to the NIPoPoWs protocol under velvet fork. The core problem is that in her suffix proof the adversary is able to claim not only blocks of the fork chain,  which are in majority adversarially generated due to the Common Prefix property, but also an arbitrarily long part of the chain adopted by an honest player. Since blocks containing false interlink pointers are accepted as valid, the verifier cannot distinguish blocks that actually belong in a chain from blocks that only seem to belong in the same chain because they are pointed to via a false interlink pointer. \\
 
 %% first reference to 1/3 adversary
-These facts make it possible to provide a secure solution for the velvet fork conditions only under the assumption of adversary of $1/3$ of the total hashing power. This claim is described and discussed in the following subsection.
+These facts make it possible to provide a secure solution for the velvet fork conditions only under the assumption of adversary of $1/3$ of the total hashing power. This claim is described and discussed in the following.
 
 \subsubsection*{Impossibility of a secure protocol for (1/2)-bounded adversary}
 During our study on the problem we failed to prove the security of several protocol constructions under $(\frac{1}{2})$-bounded adversary. We finally concluded that such a secure NIPoPoWs construction is impossible under velvet fork conditions. Though it is hard to provide a typical proof for this claim, as one should consider any possible construction, in this section we will try to argue for it. 
@@ -20,25 +20,24 @@ Now assume an adversary of $ \frac{n}{3} < t < \frac{n}{2} $. Then, as explained
 	\begin{center}
 		\includegraphics[scale=0.55]{figures/selfish_mining_pie.png}
 	\end{center}
-	\caption{\textit{Total  of adversarially and honestly generated blocks distribution during a round set S. \textbf{A} stands for blocks mined by the adversary while \textbf{B} for blocks mined by honest parties. Lined out parts denote mined blocks that were defeated by adversarially mined ones in the same round due to selfish mining. The rest denote blocks placed in the chain adopted by honest parties. \textbf{I.} With $t = n/3$, $50\%$ of the total blocks are adversarially generated in the worst case scenario. \textbf{II.} With $t > n/3$, more than half of the total blocks are adversarially generated in the worst case scenario.}}
+	\caption{\textit{Pie chart of adversarially and honestly generated blocks distribution during a round set S. Part \textbf{A} stands for blocks mined by the adversary while \textbf{B} for blocks mined by honest parties. Lined out parts denote honestly mined blocks that were defeated by adversarially mined ones in the same round due to selfish mining. The rest denote blocks placed in the chain adopted by honest parties. \textbf{I.} With $t = n/3$, $50\%$ of the total blocks are adversarially generated in the worst case scenario. \textbf{II.} With $t > n/3$, more than half of the total blocks are adversarially generated in the worst case scenario.}}
 	\label{fig:selfish_mining_pie}
 \end{figure}
 
-Observe that the property that is violated in the described attack is the $prevId$ relation among sequential blocks and cannot be validated under our working hypothesis conditions. However since the main purpose of our work is to achieve succinctness, we consider that 0-level reliability provided by the \textit{prevId} relations is not viable in order to contest adversarial proofs that utilize false interlink pointers. This is obvious in part II of Figure \ref{fig:selfish_mining_pie}, since a chain of bad quality could force a contesting proof proportional to the length of the chain, if it was to utilize the 0-level $prevId$ pointers. We thus consider that we should mostly rely on the information given by the interlink data structure as far as the validity of any proof is concerned so as to keep our protocol construction efficient.
+Observe that the property that is violated in the described attack is the $prevId$ relation between sequential blocks. However since the main purpose of our work is to achieve succinctness, the \textit{prevId} relations could not be utilized in a viable manner in order to contest adversarial proofs, as it would require proofs of length linear to that of the whole chain.  We thus consider that we should mostly rely on the information given by the interlink data structure as far as the validity of any proof is concerned so as to keep our protocol construction efficient.
 
-Now assume, to honest party's favor, that it is both possible and efficient to inspect the whole chain history that each block is commited to via its interlink pointers. Keep in mind that an adversary can keep a consistent chain considering the interlink pointers by using only her own mined blocks and, at the same time, these blocks may overwhelm the honestly generated ones. In protocol $p$ it should be decided  under what policy an honest party generates blocks and constructs suffix proofs. A decision should be made for block generation:
+Now assume, to honest parties' favor, that it is both possible and efficient to inspect the whole chain history that each block is commited to via its interlink pointers. Keep in mind that an adversary can keep a consistent chain considering the interlink pointers by using only her own mined blocks and, at the same time, these blocks may overwhelm the honestly generated ones. In our protocol $p$ it should be decided  under what policy an honest party generates blocks and constructs suffix proofs. A decision should be made for block generation:
 \begin{enumerate}
 \item interlink data are neutral as for adversarially and honestly generated blocks or 
 \item interlink data point out inconsistent blocks, meaning blocks with incorrect interlinks
-\item interlink data exclude inconsistent blocks from being part of the valid chain the super-pointers form
+\item interlink data exclude inconsistent blocks from being part of the valid chain formed by the super-pointers
 \end{enumerate}
-
-Now let's discuss the above choices. 
+Now let's examine the above choices. \\
 In the first case the arguments that an honest player could provide against an inconsistent proof could only be based on the 0-level pointers. Such a contesting proof should at least provide the 0-level subchain of length equal to the following: starting from a block included in the suffix proof but is not a block of the chain until the closest block included in the suffix proof and is a valid block of the chain. This means that contesting proofs are expected to be of length $2^\mu$ where $\mu = log(|C|)$, and subsequently are of complexity $\mathcal{O}(|C|)$ which ruins the succinctness of our protocol.
 
-In the second case an honest party could utilize this extra information provided in the interlink to prove an inconsistent proof wrong. However, keep in mind that the adversary could make such claims too. So, a claim of inconsistency for a specific included block should be followed by a proof of its inconsistency. So we fall to the previous case, where the contesting proofs are unacceptable efficiency-wise.
+In the second case an honest party could utilize this extra information provided in the interlink to prove an inconsistent proof wrong. However, keep in mind that the adversary could make such claims too. So, a claim of inconsistency for a specific block included should be followed by a proof of its inconsistency. Whatever the information considering the incorrect blocks in the interlink may be, the adversary could make some of it in her own generated blocks in order to contest an honest proof too. So we fall to the previous case turning to the 0-level in order to proof the true chain history, where the contesting proofs are unacceptable efficiency-wise.
 
-In the third case we demand from the honest players to validate the interlink structures of the blocks in the chain and exclude the inconsistent ones from the chain history that the interlinks provide. In this way we possibly could provide contesting proofs using information only from the interlinks thus keeping our proofs succinct. This solution would result to two different chain histories considering the interlink pointers: the one of the honest parties that includes only blocks with valid interlinks, and the one of the adversary which may form her own history of invalid blocks but could not include honest blocks if at least one invalid block participates. This solution seems to bring us to a notable trade-off point. On the one hand we manage to uncouple from the 0-level blocks. On the other hand, we compromise that honest players cannot use valid adversarially generated blocks in their proof, while the adversary cannot include honestly generated blocks in her proofs if inconsistent blocks are also included. This solution could not work properly for $(\frac{1}{2})$-bounded adversary though. The reason lies in the bad chain quality as pointed out earlier and shown in Figure \ref{fig:selfish_mining_pie}. If the adversary  could create his own chain history including inconsistent blocks, then she could easily construct a suffix proof that wins over an honest one because the majority of the blocks included in the chain could be adversarial with high probability. 
+In the third case we demand from the honest players to validate the interlink structures of the blocks in the chain and exclude the inconsistent ones from the chain history that the interlinks provide. In this way we could possibly provide contesting proofs using information only from the interlinks thus keeping our proofs succinct. This solution would result to two different chain histories considering the interlink pointers: the one of the honest parties that includes only blocks with valid interlinks, and the one of the adversary which may form her own history of invalid blocks but could not include honest blocks if at least one invalid block participates. This solution seems to bring us to a notable trade-off point. On the one hand we manage to uncouple from the 0-level blocks. On the other hand, we compromise that honest players cannot use valid adversarially generated blocks in their proof, while the adversary cannot include honestly generated blocks in her proofs if inconsistent blocks are also included. This solution could not work properly for $(\frac{1}{2})$-bounded adversary though. The reason lies in the bad chain quality as pointed out earlier and shown in Figure \ref{fig:selfish_mining_pie}. If the adversary  could create his own chain history including inconsistent blocks from two different chains, then she could easily construct a suffix proof that wins over an honest one because the majority of the blocks included in the chain could be adversarial with high probability. 
 
 We conclude that such a protocol could not exist for $(\frac{1}{2})$-bounded adversary.
 
